--- a/index.html
+++ b/index.html
@@ -1,33 +1,10 @@
-<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Joysmother - Assistência Técnica</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    header {
-      background-image: url("fundo.jpg"); /* coloque aqui o nome da sua imagem */
-      background-size: cover;             /* ajusta para cobrir todo o espaço */
-      background-position: center;        /* centraliza a imagem */
-      padding: 20px;
-      text-align: center;
-      color: white;
-    }
-
-    .banner {
-      width: 400px;
-      display: block;
-      margin: 0 auto 20px auto;
-    }
-
-    .social {
-      font-size: 18px;
-      font-weight: bold;
-      color: #ff0000;
-      margin-top: 10px;
-    }
-  </style>
+  <!-- Link do Font Awesome para ícones -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <header>
@@ -46,6 +23,14 @@
 
   <footer>
     <p>&copy; 2026 Joysmother - Assistência Técnica</p>
+    <p>
+      <a href="https://www.instagram.com/joysmonther?igsh=Ymt3cTFvZ2piamxw" target="_blank">
+        <i class="fab fa-instagram"></i> Instagram
+      </a> |
+      <a href="https://www.facebook.com/61586258737075/posts/122100571851208624/?mibextid=rS40aB7S9Ucbxw6v" target="_blank">
+        <i class="fab fa-facebook"></i> Facebook
+      </a>
+    </p>
   </footer>
 
   <script src="script.js"></script>
