--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <header>
     <img src="banner.png" alt="Banner Joysmother" class="banner">
-    <h1>Assistência Técnica Joysmother</h1>
+    <h1>JOYSMOTHER</h1>
+    <p>(62) 98151-4674</p>
+    <p>Assistência Técnica Joysmother</p>
     <p>Seu computador e seu notebook como novos</p>
     <p class="social">@joysmother</p>
   </header>
@@ -33,6 +35,10 @@
     </p>
   </footer>
 
-  <script src="script.js"></script>
+  <script>
+    function abrirWhatsApp() {
+      window.open("https://wa.me/5562981514674", "_blank");
+    }
+  </script>
 </body>
 </html>
