--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <img src="banner.png" alt="Banner Joysmother" class="banner">
     <h1>JOYSMOTHER</h1>
-    <p>(62) 98151-4674</p>
+    <p class="telefone">(62) 98151-4674</p>
     <p>Assistência Técnica Joysmother</p>
     <p>Seu computador e seu notebook como novos</p>
     <p class="social">@joysmother</p>
